# Version 0.5.0-alpha9 - 2022-04-26
- [fix][minor] Fix unintended infinite recursion in generic trait implementations.
- [fix][patch] Fix `needless_question_mark` clippy warnings in generated code.
- [change][patch] Switch to `clap` v3 in the examples.

# Version 0.5.0-alpha8 - 2022-01-25
- [rename][major] Rename `crate::util::format` module to `crate::format`.
- [add][minor] Add runtime interface introspection.
- [fix][minor] Remove the `Sized` restriction for the `EncodeBody` trait.
- [impl][patch] Use `poll_write_vectored` in the TCP transport to write the header and body with a single syscall.
- [add][patch] Add Wireshark dissector for TCP and UDP transports for easier debugging.

# Version 0.5.0-alpha7 - 2022-01-10
- [add][minor] Add a specific `Format` trait for generated interaces to avoid writing overly long trait bounds.

# Version 0.5.0-alpha6 - 2021-11-30
- [fix][minor] Make sure that decode errors are `Send` in all cases.

# Version 0.5.0-alpha5 - 2021-11-30
- [add][minor] `interface!(...)` now generates an `Interface` struct for introspection.
- [change][major] `interface!(...)` no longer generates a module for the created items.
- [change][major] Allow access to unknown and invalid messages in generated interfaces.
- [change][minor] Try unlinking Unix sockets before binding them.
- [impl][patch] The code generated by `interface!(...)` now suppresses some clippy warnings.

# Version 0.5.0-alpha4 - 2021-09-27
- [add][minor] Add missing `write_handle()` functions for `ReceivedRequest` and `SentRequest` in generated interfaces.

# Version 0.5.0-alpha3 - 2021-09-23
- [fix][minor] Make write handles cloneable regardless of their generic parameters.

# Version 0.5.0-alpha2 - 2021-09-22
- [add][minor] Implement `Clone` for the write handles of generated interfaces.

# Version 0.5.0-alpha1 - 2021-08-31
- [change][major] Renamed `PeerHandle::next_message()` to `recv_message()`.
- [change][major] Moved message body out of `ReceivedRequest`.