@@ -1,3 +1,6 @@
+# Unreleased
+- [add][minor] Add utility functions for working with `RecvMessageError`.
+
 # Version 0.5.0-alpha9 - 2022-04-26
 - [fix][minor] Fix unintended infinite recursion in generic trait implementations.
 - [fix][patch] Fix `needless_question_mark` clippy warnings in generated code.
